app/styles/shared/utilities/_utilities.text-alignment.scss
//* ========================================================================
//  TEXT
// ======================================================================== */

// Text Alignment
/* ==================================== */

.u-ta {
  &--justify { text-align: justify; }
  &--right   { text-align: right;   }
  &--left    { text-align: left;    }
  &--center  { text-align: center;  }
}

@media (min-width: $breakpoint-small) {
  .u-ta--md {
    &-justify { text-align: justify; }
    &-right   { text-align: right;   }
    &-left    { text-align: left;    }
    &-center  { text-align: center;  }
  }
}

@media (min-width: $breakpoint-medium) {
  .u-ta--lg {
    &-justify { text-align: justify; }
    &-right   { text-align: right;   }
    &-left    { text-align: left;    }
    &-center  { text-align: center;  }
  }
}

// Text Size & Weight
/* ==================================== */

.u-text-weight-thin { font-weight: 300; }

